GNOME Bugzilla – Bug 763625
decodebin: Crashes when shutting down during autoplugging
Last modified: 2016-03-14 17:20:14 UTC
+++ This bug was initially created as a clone of Bug #763491 +++ See also bug #752651
Created attachment 323879 [details] [review] decodebin: Shut down all elements explicitly to NULL state before freeing the decode chain Due to transient locked state during autoplugging, some elements might be ignored by the GstBin::change_state() and might still be running. Which could then cause pad-added and similar accessing decodebin state that does not exist anymore, and crash.
I *think* after this we can also remove the chain refcounting and other weird fixes that happened in decodebin. But that's for after 1.8
Seems to solve the problem, let's see after 1.8 if we can get rid of the other patches.
I got an assert with the test case from the linked bug, on current master, with that patch on. This is rather rare. I've seen asserts before in gst_poll_something, but it's not happened again now that I have fatal_warnings on, and they're gone from my backlog.
+ Trace 236079
Thread 2 (Thread 0x7f9e91d11700 (LWP 17004))